<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/eerie_black"
    >

    <ImageView
        android:id="@+id/topbar"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        app:srcCompat="@drawable/top_bar_logo" />

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/designer"
        android:text="@string/register_app_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="415dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/designer"
                android:text="@string/application_name"
                android:textColor="#000000"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/app_name_txt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/box"
                android:ems="10"
                android:inputType="text"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/type_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/designer"
                android:text="@string/type"
                android:textColor="#000000"
                android:textSize="34sp" />

            <RadioGroup
                android:id="@+id/type_rd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/view_below"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <RadioButton
                    android:id="@+id/gameRd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:fontFamily="@font/designer"
                    android:text="@string/type_game"
                    android:textSize="28sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/appRd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/designer"
                    android:text="@string/type_app"
                    android:textSize="28sp"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
            </RadioGroup>

            <TextView
                android:id="@+id/platform_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/designer"
                android:text="@string/platform"
                android:textColor="#000000"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/platform_txt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/box"
                android:ems="10"
                android:inputType="text"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/designer"
                android:text="@string/description"
                android:textColor="#000000"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/description_txt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/box"
                android:ems="10"
                android:inputType="text"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                tools:ignore="SpeakableTextPresentCheck" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/createBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_weight="1"
            android:background="@drawable/box"
            android:backgroundTint="@color/burnt_sienna"
            android:fontFamily="@font/designer"
            android:text="@string/register_app_create_btn"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

</LinearLayout>