<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_list"
    android:id="@+id/mainLayout"
    >

  <ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyleHorizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"/>

  <ImageView
        android:id="@+id/topbar"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        app:srcCompat="@drawable/top_bar" />

  <ImageView
    android:id="@+id/Register_title"
    android:layout_width="324dp"
    android:layout_height="107dp"
    android:layout_gravity="center"
    android:layout_marginTop="50dp"
    app:srcCompat="@drawable/title" />

  <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="275dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/designer"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/App_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/designer"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/box"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/type_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/designer"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/passTxt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/box"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/createBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_weight="1"
            android:background="@drawable/box"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/designer"
            android:text="@string/login_create"
            android:textSize="34sp" />

        <Button
            android:id="@+id/enterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_weight="1"
            android:background="@drawable/box"
            android:backgroundTint="@color/burnt_sienna"
            android:fontFamily="@font/designer"
            android:text="@string/login_enter"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

</LinearLayout>
